--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+##CADENA DE CONEXION CON MYSQL
+##spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/ec2
+spring.datasource.username=root
+spring.datasource.password=Isolucione$22
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.show-sql: true
 
+spring.security.user.name=Joaquin
+spring.security.user.password=123456
+
+jwt.secret=Token
